--- a/demo.html
+++ b/demo.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Salut</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet laboriosam corporis ipsum doloribus nostrum dolor dolore at quasi? Placeat error quam eum! Autem, inventore ratione. Deleniti facere amet minima id.</p>
 </body>
 </html>
