--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Salut am mogificat din git</h1>
+    <h1>Salut am modificat din git</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet laboriosam corporis ipsum doloribus nostrum dolor dolore at quasi? Placeat error quam eum! Autem, inventore ratione. Deleniti facere amet minima id.</p>
 </body>
 </html>
